lib/miniaudio/miniaudio.auto.c.v


// MA_API ma_hpf1_config ma_hpf1_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double cutoffFrequency);
fn C.ma_hpf1_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64) C.ma_hpf1_config
[inline]
pub fn hpf1_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64) C.ma_hpf1_config {
	return C.ma_hpf1_config_init(format, channels, sample_rate, cutoff_frequency)
}

// MA_API ma_hpf2_config ma_hpf2_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double cutoffFrequency, double q);
fn C.ma_hpf2_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, q f64) C.ma_hpf2_config
[inline]
pub fn hpf2_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, q f64) C.ma_hpf2_config {
	return C.ma_hpf2_config_init(format, channels, sample_rate, cutoff_frequency, q)
}

// MA_API ma_result ma_hpf1_init(const ma_hpf1_config* pConfig, ma_hpf1* pHPF);
fn C.ma_hpf1_init(p_config &C.ma_hpf1_config, p_h_p_f &C.ma_hpf1) Result
[inline]
pub fn hpf1_init(p_config &C.ma_hpf1_config, p_h_p_f &C.ma_hpf1) Result {
	return C.ma_hpf1_init(p_config, p_h_p_f)
}

// MA_API ma_result ma_hpf1_reinit(const ma_hpf1_config* pConfig, ma_hpf1* pHPF);
fn C.ma_hpf1_reinit(p_config &C.ma_hpf1_config, p_h_p_f &C.ma_hpf1) Result
[inline]
pub fn hpf1_reinit(p_config &C.ma_hpf1_config, p_h_p_f &C.ma_hpf1) Result {
	return C.ma_hpf1_reinit(p_config, p_h_p_f)
}

// MA_API ma_result ma_hpf1_process_pcm_frames(ma_hpf1* pHPF, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_hpf1_process_pcm_frames(p_h_p_f &C.ma_hpf1, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn hpf1_process_pcm_frames(p_h_p_f &C.ma_hpf1, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_hpf1_process_pcm_frames(p_h_p_f, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_hpf1_get_latency(const ma_hpf1* pHPF);
fn C.ma_hpf1_get_latency(p_h_p_f &C.ma_hpf1) u32
[inline]
pub fn hpf1_get_latency(p_h_p_f &C.ma_hpf1) u32 {
	return C.ma_hpf1_get_latency(p_h_p_f)
}

// MA_API ma_result ma_hpf2_init(const ma_hpf2_config* pConfig, ma_hpf2* pHPF);
fn C.ma_hpf2_init(p_config &C.ma_hpf2_config, p_h_p_f &C.ma_hpf2) Result
[inline]
pub fn hpf2_init(p_config &C.ma_hpf2_config, p_h_p_f &C.ma_hpf2) Result {
	return C.ma_hpf2_init(p_config, p_h_p_f)
}

// MA_API ma_result ma_hpf2_reinit(const ma_hpf2_config* pConfig, ma_hpf2* pHPF);
fn C.ma_hpf2_reinit(p_config &C.ma_hpf2_config, p_h_p_f &C.ma_hpf2) Result
[inline]
pub fn hpf2_reinit(p_config &C.ma_hpf2_config, p_h_p_f &C.ma_hpf2) Result {
	return C.ma_hpf2_reinit(p_config, p_h_p_f)
}

// MA_API ma_result ma_hpf2_process_pcm_frames(ma_hpf2* pHPF, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_hpf2_process_pcm_frames(p_h_p_f &C.ma_hpf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn hpf2_process_pcm_frames(p_h_p_f &C.ma_hpf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_hpf2_process_pcm_frames(p_h_p_f, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_hpf2_get_latency(const ma_hpf2* pHPF);
fn C.ma_hpf2_get_latency(p_h_p_f &C.ma_hpf2) u32
[inline]
pub fn hpf2_get_latency(p_h_p_f &C.ma_hpf2) u32 {
	return C.ma_hpf2_get_latency(p_h_p_f)
}

// MA_API ma_hpf_config ma_hpf_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double cutoffFrequency, ma_uint32 order);
fn C.ma_hpf_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, order u32) C.ma_hpf_config
[inline]
pub fn hpf_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, order u32) C.ma_hpf_config {
	return C.ma_hpf_config_init(format, channels, sample_rate, cutoff_frequency, order)
}

// MA_API ma_result ma_hpf_init(const ma_hpf_config* pConfig, ma_hpf* pHPF);
fn C.ma_hpf_init(p_config &C.ma_hpf_config, p_h_p_f &C.ma_hpf) Result
[inline]
pub fn hpf_init(p_config &C.ma_hpf_config, p_h_p_f &C.ma_hpf) Result {
	return C.ma_hpf_init(p_config, p_h_p_f)
}

// MA_API ma_result ma_hpf_reinit(const ma_hpf_config* pConfig, ma_hpf* pHPF);
fn C.ma_hpf_reinit(p_config &C.ma_hpf_config, p_h_p_f &C.ma_hpf) Result
[inline]
pub fn hpf_reinit(p_config &C.ma_hpf_config, p_h_p_f &C.ma_hpf) Result {
	return C.ma_hpf_reinit(p_config, p_h_p_f)
}

// MA_API ma_result ma_hpf_process_pcm_frames(ma_hpf* pHPF, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_hpf_process_pcm_frames(p_h_p_f &C.ma_hpf, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn hpf_process_pcm_frames(p_h_p_f &C.ma_hpf, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_hpf_process_pcm_frames(p_h_p_f, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_hpf_get_latency(const ma_hpf* pHPF);
fn C.ma_hpf_get_latency(p_h_p_f &C.ma_hpf) u32
[inline]
pub fn hpf_get_latency(p_h_p_f &C.ma_hpf) u32 {
	return C.ma_hpf_get_latency(p_h_p_f)
}

// MA_API ma_bpf2_config ma_bpf2_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double cutoffFrequency, double q);
fn C.ma_bpf2_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, q f64) C.ma_bpf2_config
[inline]
pub fn bpf2_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, q f64) C.ma_bpf2_config {
	return C.ma_bpf2_config_init(format, channels, sample_rate, cutoff_frequency, q)
}

// MA_API ma_result ma_bpf2_init(const ma_bpf2_config* pConfig, ma_bpf2* pBPF);
fn C.ma_bpf2_init(p_config &C.ma_bpf2_config, p_b_p_f &C.ma_bpf2) Result
[inline]
pub fn bpf2_init(p_config &C.ma_bpf2_config, p_b_p_f &C.ma_bpf2) Result {
	return C.ma_bpf2_init(p_config, p_b_p_f)
}

// MA_API ma_result ma_bpf2_reinit(const ma_bpf2_config* pConfig, ma_bpf2* pBPF);
fn C.ma_bpf2_reinit(p_config &C.ma_bpf2_config, p_b_p_f &C.ma_bpf2) Result
[inline]
pub fn bpf2_reinit(p_config &C.ma_bpf2_config, p_b_p_f &C.ma_bpf2) Result {
	return C.ma_bpf2_reinit(p_config, p_b_p_f)
}

// MA_API ma_result ma_bpf2_process_pcm_frames(ma_bpf2* pBPF, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_bpf2_process_pcm_frames(p_b_p_f &C.ma_bpf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn bpf2_process_pcm_frames(p_b_p_f &C.ma_bpf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_bpf2_process_pcm_frames(p_b_p_f, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_bpf2_get_latency(const ma_bpf2* pBPF);
fn C.ma_bpf2_get_latency(p_b_p_f &C.ma_bpf2) u32
[inline]
pub fn bpf2_get_latency(p_b_p_f &C.ma_bpf2) u32 {
	return C.ma_bpf2_get_latency(p_b_p_f)
}

// MA_API ma_bpf_config ma_bpf_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double cutoffFrequency, ma_uint32 order);
fn C.ma_bpf_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, order u32) C.ma_bpf_config
[inline]
pub fn bpf_config_init(format Format, channels u32, sample_rate u32, cutoff_frequency f64, order u32) C.ma_bpf_config {
	return C.ma_bpf_config_init(format, channels, sample_rate, cutoff_frequency, order)
}

// MA_API ma_result ma_bpf_init(const ma_bpf_config* pConfig, ma_bpf* pBPF);
fn C.ma_bpf_init(p_config &C.ma_bpf_config, p_b_p_f &C.ma_bpf) Result
[inline]
pub fn bpf_init(p_config &C.ma_bpf_config, p_b_p_f &C.ma_bpf) Result {
	return C.ma_bpf_init(p_config, p_b_p_f)
}

// MA_API ma_result ma_bpf_reinit(const ma_bpf_config* pConfig, ma_bpf* pBPF);
fn C.ma_bpf_reinit(p_config &C.ma_bpf_config, p_b_p_f &C.ma_bpf) Result
[inline]
pub fn bpf_reinit(p_config &C.ma_bpf_config, p_b_p_f &C.ma_bpf) Result {
	return C.ma_bpf_reinit(p_config, p_b_p_f)
}

// MA_API ma_result ma_bpf_process_pcm_frames(ma_bpf* pBPF, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_bpf_process_pcm_frames(p_b_p_f &C.ma_bpf, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn bpf_process_pcm_frames(p_b_p_f &C.ma_bpf, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_bpf_process_pcm_frames(p_b_p_f, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_bpf_get_latency(const ma_bpf* pBPF);
fn C.ma_bpf_get_latency(p_b_p_f &C.ma_bpf) u32
[inline]
pub fn bpf_get_latency(p_b_p_f &C.ma_bpf) u32 {
	return C.ma_bpf_get_latency(p_b_p_f)
}

// MA_API ma_notch2_config ma_notch2_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double q, double frequency);
fn C.ma_notch2_config_init(format Format, channels u32, sample_rate u32, q f64, frequency f64) C.ma_notch2_config
[inline]
pub fn notch2_config_init(format Format, channels u32, sample_rate u32, q f64, frequency f64) C.ma_notch2_config {
	return C.ma_notch2_config_init(format, channels, sample_rate, q, frequency)
}

// MA_API ma_result ma_notch2_init(const ma_notch2_config* pConfig, ma_notch2* pFilter);
fn C.ma_notch2_init(p_config &C.ma_notch2_config, p_filter &C.ma_notch2) Result
[inline]
pub fn notch2_init(p_config &C.ma_notch2_config, p_filter &C.ma_notch2) Result {
	return C.ma_notch2_init(p_config, p_filter)
}

// MA_API ma_result ma_notch2_reinit(const ma_notch2_config* pConfig, ma_notch2* pFilter);
fn C.ma_notch2_reinit(p_config &C.ma_notch2_config, p_filter &C.ma_notch2) Result
[inline]
pub fn notch2_reinit(p_config &C.ma_notch2_config, p_filter &C.ma_notch2) Result {
	return C.ma_notch2_reinit(p_config, p_filter)
}

// MA_API ma_result ma_notch2_process_pcm_frames(ma_notch2* pFilter, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_notch2_process_pcm_frames(p_filter &C.ma_notch2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn notch2_process_pcm_frames(p_filter &C.ma_notch2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_notch2_process_pcm_frames(p_filter, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_notch2_get_latency(const ma_notch2* pFilter);
fn C.ma_notch2_get_latency(p_filter &C.ma_notch2) u32
[inline]
pub fn notch2_get_latency(p_filter &C.ma_notch2) u32 {
	return C.ma_notch2_get_latency(p_filter)
}

// MA_API ma_peak2_config ma_peak2_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double gainDB, double q, double frequency);
fn C.ma_peak2_config_init(format Format, channels u32, sample_rate u32, gain_d_b f64, q f64, frequency f64) C.ma_peak2_config
[inline]
pub fn peak2_config_init(format Format, channels u32, sample_rate u32, gain_d_b f64, q f64, frequency f64) C.ma_peak2_config {
	return C.ma_peak2_config_init(format, channels, sample_rate, gain_d_b, q, frequency)
}

// MA_API ma_result ma_peak2_init(const ma_peak2_config* pConfig, ma_peak2* pFilter);
fn C.ma_peak2_init(p_config &C.ma_peak2_config, p_filter &C.ma_peak2) Result
[inline]
pub fn peak2_init(p_config &C.ma_peak2_config, p_filter &C.ma_peak2) Result {
	return C.ma_peak2_init(p_config, p_filter)
}

// MA_API ma_result ma_peak2_reinit(const ma_peak2_config* pConfig, ma_peak2* pFilter);
fn C.ma_peak2_reinit(p_config &C.ma_peak2_config, p_filter &C.ma_peak2) Result
[inline]
pub fn peak2_reinit(p_config &C.ma_peak2_config, p_filter &C.ma_peak2) Result {
	return C.ma_peak2_reinit(p_config, p_filter)
}

// MA_API ma_result ma_peak2_process_pcm_frames(ma_peak2* pFilter, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_peak2_process_pcm_frames(p_filter &C.ma_peak2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn peak2_process_pcm_frames(p_filter &C.ma_peak2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_peak2_process_pcm_frames(p_filter, p_frames_out, p_frames_in, frame_count)
}
